--- a/DigitalUpscaleManagerSite/DigitalUpscale.master
+++ b/DigitalUpscaleManagerSite/DigitalUpscale.master
@@ -14,6 +14,16 @@
         <header>
             <h1>Digital Upscale Manager for Ballgames</h1>
             <h2>"Managing Ballgames with Technology"</h2>
+            <asp:Menu ID="mnuMaster" runat="server" BackColor="#B5C7DE" DataSourceID="SiteMapDataSource1" DynamicHorizontalOffset="2" Font-Names="Verdana" Font-Size="0.8em" ForeColor="#284E98" StaticSubMenuIndent="10px">
+                <DynamicHoverStyle BackColor="#284E98" ForeColor="White" />
+                <DynamicMenuItemStyle HorizontalPadding="5px" VerticalPadding="2px" />
+                <DynamicMenuStyle BackColor="#B5C7DE" />
+                <DynamicSelectedStyle BackColor="#507CD1" />
+                <StaticHoverStyle BackColor="#284E98" ForeColor="White" />
+                <StaticMenuItemStyle HorizontalPadding="5px" VerticalPadding="2px" />
+                <StaticSelectedStyle BackColor="#507CD1" />
+            </asp:Menu>
+            <asp:SiteMapDataSource ID="SiteMapDataSource1" runat="server" />
         </header>
         <div>
             <asp:ContentPlaceHolder ID="formPlaceHolder" runat="server">
