--- a/DigitalUpscaleManagerSite/DigitalUpscale.master
+++ b/DigitalUpscaleManagerSite/DigitalUpscale.master
@@ -14,7 +14,7 @@
         <header>
             <h1>Digital Upscale Manager for Ballgames</h1>
             <h2>"Managing Ballgames with Technology"</h2>
-            <asp:Menu ID="mnuMaster" runat="server" BackColor="#B5C7DE" DataSourceID="SiteMapDataSource1" DynamicHorizontalOffset="2" Font-Names="Verdana" Font-Size="0.8em" ForeColor="#284E98" StaticSubMenuIndent="10px">
+            <asp:Menu ID="mnuUpscale" CssClass="mnuUpscale" runat="server" BackColor="#B5C7DE" DataSourceID="SiteMapDataSource1" DynamicHorizontalOffset="2" Font-Names="Verdana" Font-Size="0.8em" ForeColor="#284E98" StaticSubMenuIndent="10px">
                 <DynamicHoverStyle BackColor="#284E98" ForeColor="White" />
                 <DynamicMenuItemStyle HorizontalPadding="5px" VerticalPadding="2px" />
                 <DynamicMenuStyle BackColor="#B5C7DE" />
